--- a/userspace/Makefile
+++ b/userspace/Makefile
@@ -1,7 +1,13 @@
-all: reader
+all: reader writer
 
 reader: reader.o
 	gcc -g reader.o -o reader
 
 reader.o: reader.c
 	gcc -c reader.c -o reader.o
+
+writer: writer.o
+	gcc -g writer.o -o writer
+
+writer.o: writer.c
+	gcc -c writer.c -o writer.o
