--- a/modules/chardev/dkms.conf
+++ b/modules/chardev/dkms.conf
@@ -1,5 +1,7 @@
-MAKE="make"
-MAKE_smp="make"
+MAKE="make all KVERSION=$kernelver"
 DEST_MODULE_LOCATION="/extra/chardev"
+BUILT_MODULE_NAME="chardev"
 PACKAGE_NAME="chardev"
 PACKAGE_VERSION="1.0"
+AUTOINSTALL="yes"
+CLEAN="make clean"
