--- a/modules/chardev/Makefile
+++ b/modules/chardev/Makefile
@@ -1,4 +1,8 @@
 obj-m += chardev.o
+KVERSION := $(shell uname -r)
 
 all:
-	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
+	make -C /lib/modules/$(KVERSION)/build M=$(PWD) modules
+
+clean:
+	make -C /lib/modules/$(KVERSION)/build M=$(PWD) clean
